# citadel

./: CMakeLists.txt  README.md
include/: citadel.h
src/: cit_internal.h  citadel.c  internal.h  test.c
src/gfx/: dummy.c  gfx.c  gfx_internal.h  vulkan.c
src/gfx/os/: emsc_opengl.c  linux_dummy.c  linux_opengl.c
src/os/: emsc.c  linux.c  linux_internal.h  os_internal.h
src/os/linux/: internal.h  opengl.c  os.c  window.c
